--- a/components/User/profile.module.css
+++ b/components/User/profile.module.css
@@ -11,17 +11,17 @@
   @apply col-start-1 col-end-2 row-start-1 row-end-7 h-full   bg-gray-medium rounded-xl  p-1
 }
 .containerRight2{
-  @apply col-start-3 col-end-4 row-start-1 row-end-5   p-1
+  @apply col-start-3 col-end-4 row-start-1 row-end-5   p-1 bg-gray-medium rounded-xl
 }
 .containerRight{
-  @apply col-start-2 col-end-3 row-start-1 row-end-5    p-1}
+  @apply col-start-2 col-end-3 row-start-1 row-end-5    p-1 bg-gray-medium rounded-xl}
 
 
 .belowContainerRight{
-    @apply col-start-3 col-end-4 row-start-5 row-end-7   p-1}
+    @apply col-start-3 col-end-4 row-start-5 row-end-7   p-1 bg-gray-medium rounded-xl}
   
 .belowcontainerleft{
-    @apply col-start-2 col-end-3 row-start-5 row-end-7     p-1 items-center
+    @apply col-start-2 col-end-3 row-start-5 row-end-7     p-1 items-center bg-gray-medium rounded-xl
   }
 .containerleft h1{
   @apply bg-gradient-to-l from-primary via-secondary  to-[#f43d00] bg-clip-text font-bold text-transparent text-left text-xl  pl-2
@@ -43,7 +43,7 @@
   @apply my-auto text-center text-sm
 }
 .belowcontainerleftInner{
-  @apply grid grid-cols-1  grid-flow-row content-center justify-center items-center overflow-y-scroll overflow-x-hidden space-y-2 p-3 max-h-[180px] h-full
+  @apply grid grid-cols-1  grid-flow-row items-center justify-center  overflow-y-scroll overflow-x-hidden space-y-2 p-3 max-h-[180px] h-full
 }
 
 .containerRight h1{
@@ -90,7 +90,7 @@
 
 
 .containerRightInner{
-  @apply grid grid-cols-1  grid-flow-row content-center justify-center  overflow-y-scroll overflow-x-hidden space-y-2 p-3 max-h-[180px] h-full
+  @apply grid grid-cols-1  grid-flow-row  justify-center items-center  overflow-y-scroll overflow-x-hidden space-y-2 p-3 max-h-[180px] h-full
 }
 
 .H{
