--- a/styles/globals.css
+++ b/styles/globals.css
@@ -66,3 +66,10 @@
 .scrollbar-hide::-webkit-scrollbar {
   display: none;
 }
+
+
+.scrollbar-style::-webkit-scrollbar {
+  background-color: #181F26;
+  width: 10px;
+  border-radius: 20px;
+}
