--- a/components/shared/Header/Header.module.css
+++ b/components/shared/Header/Header.module.css
@@ -19,7 +19,6 @@
 }
 
 
-
 .nav_links {
   @apply  text-2xl uppercase  px-2 px-4 py-2.5  w-full z-10 top-0 left-0;
 }
@@ -66,6 +65,9 @@
   .burger {
     @apply block;
   }
+  .mainmenu{
+    @apply hidden;
+  }
 
 }
 
@@ -74,5 +76,7 @@
   .burger {
     @apply block;
   }
-
+  .mainmenu{
+    @apply hidden;
+  }
 }
