--- a/components/HomePage/Leagues/Leagues.module.css
+++ b/components/HomePage/Leagues/Leagues.module.css
@@ -9,17 +9,17 @@
   @apply w-1 h-1   bg-gray-light rounded-lg 
 }
 .resultsRow{
-  @apply grid grid-cols-5 w-full text-white  gap-3 py-4 justify-items-center;
+  @apply grid grid-cols-5 grid-flow-row auto-rows-[35px] my-auto w-full text-white  gap-3 items-center justify-items-center;
 }
 
 
 .resultsRow1{
-  @apply grid grid-cols-5  text-white gap-3 justify-items-center;
+  @apply grid grid-cols-5 text-white gap-3 justify-items-center;
 }
 
 
 .container {
-  @apply grid-flow-col auto-cols-max gap-y-2  rounded-3xl bg-gray-light;
+  @apply grid grid-flow-row    rounded-3xl bg-gray-light;
 }
 
 
