--- a/components/HomePage/Leagues/Leagues.module.css
+++ b/components/HomePage/Leagues/Leagues.module.css
@@ -3,13 +3,13 @@
   @apply my-5 flex flex-col 
 }
 .resultsContainer{
-  @apply p-4 
+  @apply p-4 space-y-2
 }
 .resultsContainer::-webkit-scrollbar{
   @apply w-1 h-1   bg-gray-light rounded-lg 
 }
 .resultsRow{
-  @apply grid grid-cols-5 grid-flow-row auto-rows-[35px] my-auto w-full text-white  gap-3 items-center justify-items-center;
+  @apply grid grid-cols-5 grid-flow-row auto-rows-auto my-auto w-full text-white  gap-3 items-center justify-items-center rounded-full;
 }
 
 
